--- a/sass/partials/_sidebar.scss
+++ b/sass/partials/_sidebar.scss
@@ -21,6 +21,11 @@
   &:last-child {
     margin-bottom: 40px;
   }
+  &.widget_augmit_contact_info_widget{
+    .wp-block-heading{
+      margin-top: -8px;
+    }
+  }
   @include sm {
     padding: 30px;
   }
